scripts/nullaway/annotator/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8.txt
../annotator/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/StdIn.java:321: warning: [dep-ann] deprecated item is not annotated with @Deprecated
    public static int[] readInts() {
                        ^
../annotator/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/StdIn.java:332: warning: [dep-ann] deprecated item is not annotated with @Deprecated
    public static double[] readDoubles() {
                           ^
../annotator/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/StdIn.java:341: warning: [dep-ann] deprecated item is not annotated with @Deprecated
    public static String[] readStrings() {
                           ^
../annotator/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/tests/Test.java:51: error: [NullAway] initializer method does not guarantee @NonNull fields I (line 17), Q (line 19), Y (line 21), D (line 33), inInv (line 35), N (line 39), M (line 41), R (line 43), V (line 49) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Test() {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/model/QBnBVariable.java:37: error: [NullAway] read of @NonNull field name before initialization
		this.name=name;
		          ^
    (see http://t.uber.com/nullaway )
../annotator/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/model/Model.java:137: error: [NullAway] initializer method does not guarantee @NonNull fields U (line 27), L (line 33), A (line 49), c (line 54), b (line 60), I (line 95), ofle (line 119), simplex (line 131) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Model() {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/model/Model.java:584: error: [NullAway] assigning @Nullable expression to @NonNull field
		A=null;
		 ^
    (see http://t.uber.com/nullaway )
../annotator/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/model/Model.java:642: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../annotator/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/SimplexAlgorithm.java:190: error: [NullAway] initializer method does not guarantee @NonNull fields B (line 34), N (line 40), xb (line 46), xn (line 52) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	 public SimplexAlgorithm(double[][] A, double[] b, double[] c, String[] I, double[] U, double[] L, boolean print) {
	        ^
    (see http://t.uber.com/nullaway )
../annotator/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/SimplexAlgorithm.java:215: error: [NullAway] initializer method does not guarantee @NonNull fields B (line 34), N (line 40), xb (line 46), xn (line 52), cb (line 58), cn (line 64), b (line 70), In (line 76), Ib (line 82), c (line 88), A (line 103), dual (line 109), Ub (line 121), Lb (line 127), Un (line 134), Ln (line 140), U (line 146), L (line 152), I (line 180) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	 public SimplexAlgorithm() {
	        ^
    (see http://t.uber.com/nullaway )
../annotator/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/knapSavings/KnapSavings.java:30: error: [NullAway] initializer method does not guarantee @NonNull field W (line 16) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public KnapSavings() {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/knapSavings/KnapSavings.java:42: error: [NullAway] read of @NonNull field P before initialization
		x= new int[P.length];
		           ^
    (see http://t.uber.com/nullaway )
../annotator/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/StdOut.java:36: error: [NullAway] @NonNull static field out not initialized
    private static PrintWriter out;
                               ^
    (see http://t.uber.com/nullaway )
../annotator/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/Queue.java:82: error: [NullAway] dereferenced expression first is @Nullable
        return first.item;
                    ^
    (see http://t.uber.com/nullaway )
../annotator/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/Queue.java:95: error: [NullAway] dereferenced expression oldlast is @Nullable
        else           oldlast.next = last;
                              ^
    (see http://t.uber.com/nullaway )
../annotator/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/Queue.java:106: error: [NullAway] dereferenced expression first is @Nullable
        Item item = first.item;
                         ^
    (see http://t.uber.com/nullaway )
../annotator/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/Queue.java:110: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return item;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/Queue.java:145: error: [NullAway] dereferenced expression current is @Nullable
            Item item = current.item;
                               ^
    (see http://t.uber.com/nullaway )
../annotator/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/StdIn.java:57: error: [NullAway] @NonNull static field scanner not initialized
    private static Scanner scanner;
                           ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
16 errors
3 warnings
